update and delete forum mess
